--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
     "scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
     "\n",
     "\n",
-    "with open('qwen.txt', 'r') as f1, open('qwen_rag.txt', 'r') as f2, open('/home/alina/QA_rag/db/test/test.answer', 'r') as f3:\n",
+    "with open('qwen.txt', 'r') as f1, open('qwen_rag.txt', 'r') as f2, open('../db/test/test.answer', 'r') as f3:\n",
     "        for q, rag, orig in zip(f1, f2, f3):\n",
     "                candidate = q.split()\n",
     "                candidate_rag = rag.split()\n",
